_sass/_base.scss
*, *::after, *::before {
  box-sizing: border-box;
}

*::selection {
  background-color: $gray-300;
  color: $primary-900;
}

@media (prefers-color-scheme: dark) {
  $color-scrollbar: #1c1e1f;
  $color-scrollbar-thumb: #2a2c2e;

  * {
    scrollbar-color: $color-scrollbar-thumb $color-scrollbar;
    scrollbar-color: dark;
    -webkit-scrollbar-color: dark;
  }

  ::-webkit-scrollbar {
    background-color: $color-scrollbar;
  }

  ::-webkit-scrollbar-thumb {
    background-color: $color-scrollbar-thumb;
  }
}

html {
  padding: 0;
  margin: 0;
  background-color: var(--gray-100);
  color: var(--gray-900);
}

body {
  padding: 0;
  margin: 0;
  overflow-x: hidden;
  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-weight: 400;
}

a {
  color: var(--gray-900);
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
}

h1 {
  font-size: 2.4rem;
}

h2 {
  font-size: 1.8rem;
}

h3 {
  font-size: 1.6rem;
}

h4 {
  font-size: 1.4rem;
}

h5 {
  font-size: 1.3rem;
}

h6 {
  font-size: 1.1rem;
}

p, code, input, label {
  font-size: 1.1rem;
}

ul, ol {
  font-size: 1rem;
}

small {
  font-size: .8rem;
}

button, .btn {
  padding: .7rem 1.2rem;
  border-radius: .25rem;
  color: var(--gray-900);
  background-color: var(--gray-200);
  border: 1px solid var(--gray-200);
  text-decoration: none;
  cursor: pointer;
  transition: all .3s $ease;

  &.hoverable {
    @extend %elevation-2;

    &:hover, &:active {
      @extend %elevation-4;
    }
  }
  
  &.flat {
    background-color: transparent;
    border: none;

    &:hover, &:active, &:focus {
      background-color: rgba($light, .5);
      outline: 0;
    }
  }

  &:hover, &:active, &:focus {
    background-color: var(--light);
    outline: 0;
  }
}

figure {
  margin: 1.5rem 0;
  padding: 1rem;
}

pre {
  margin: 0;
}

// Followed Boostrap's breakpoints specs
@media screen and (min-width: 768px) {
  h1 {
    font-size: 3rem;
  }
  
  h2 {
    font-size: 2rem;
  }
  
  h3 {
    font-size: 1.8rem;
  }
  
  h4 {
    font-size: 1.5rem;
  }
  
  h5 {
    font-size: 1.3rem;
  }
  
  h6 {
    font-size: 1.1rem;
  }

  p, code, input, label {
    font-size: 1.3rem;
  }

  ul, ol {
    font-size: 1.1rem;
  }

  small {
    font-size: 1rem;
  }
}

